--- a/level 35/homework/style1.css
+++ b/level 35/homework/style1.css
@@ -1,4 +1,6 @@
 * {
+    padding: 0;
+    margin: 5;
     box-sizing: border-box;
 }
 
@@ -62,7 +64,7 @@ h1 {
 
 button {
     background-color: chartreuse;
-    width: 150px;
-    height: 200px;
+    width: 100px;
+    height: 50px;
     border-radius: 5px;
 }
